

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})


ADD_EXECUTABLE(commtest
	main.cpp
)

TARGET_LINK_LIBRARIES(commtest
#	${Boost_SYSTEM_LIBRARY}
#	${Boost_FILESYSTEM_LIBRARY}
	usb
)

SET_TARGET_PROPERTIES(commtest
  PROPERTIES
    VERSION ${VERSION_SERIES}.${VERSION_MAJOR}.${VERSION_MINOR}
    DEBUG_POSTFIX "d"
)


